--- a/sample-app/src/main/res/values/dimens.xml
+++ b/sample-app/src/main/res/values/dimens.xml
@@ -1,3 +1,6 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="image_size">300dp</dimen>
+    <dimen name="margin_between_elements">16dp</dimen>
+
 </resources>
