--- a/sample-app/src/main/res/layout/fragment_first.xml
+++ b/sample-app/src/main/res/layout/fragment_first.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".FirstFragment">
 
     <data>
 
@@ -8,12 +11,9 @@
             type="com.splunk.android.sample.FirstFragment" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".FirstFragment">
-
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/textview_first"
