Handle exceptions that occur while making okhttp calls. (#28)
* Handle exceptions that occur while making okhttp calls.
This is necessary since zipkin swallows event attributes, and we lose the details from the otel instrumentation.

* add attribute copies for the RUM UI/backend

--- a/sample-app/src/main/res/layout/fragment_first.xml
+++ b/sample-app/src/main/res/layout/fragment_first.xml
@@ -55,6 +55,20 @@
                 android:layout_marginTop="8dp"
                 android:text="@string/http_me_up" />
 
+            <Button
+                android:id="@+id/http_me_not_found"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="@string/http_not_found" />
+
+            <Button
+                android:id="@+id/http_me_bad"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="@string/http_me_bad" />
+
             <TextView
                 android:id="@+id/http_result"
                 android:layout_width="50dp"
