Implement very basic ANR detection and reporting. (#78)
* Implement very basic ANR detection and reporting.
And add a button to the sample app to demo.

* ping the main thread, rather than just looking for state

* Robustify the ANR detection to actually use the main thread for a miniscule amount of work.

* a little code de-nesting

* Add some additional test code to make sure we don't over-report the ANR status

--- a/sample-app/src/main/res/layout/fragment_second.xml
+++ b/sample-app/src/main/res/layout/fragment_second.xml
@@ -19,49 +19,57 @@
             android:id="@+id/textview_second"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/button_to_webview"
+            app:layout_constraintBottom_toTopOf="@id/button_box"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/button_to_webview"
-            android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:text="@string/next"
-            app:layout_constraintBottom_toTopOf="@id/button_second"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textview_second" />
-
-        <Button
-            android:id="@+id/button_second"
+        <LinearLayout
+            android:id="@+id/button_box"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/previous"
-            app:layout_constraintBottom_toTopOf="@id/button_spam"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/button_to_webview" />
+            android:orientation="vertical"
 
-        <Button
-            android:id="@+id/button_spam"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/start_spam"
-            app:layout_constraintBottom_toTopOf="@id/spam_status"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button_second" />
-
-        <TextView
-            android:id="@+id/spam_status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{secondFragment.spanCountLabel}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button_spam" />
+            app:layout_constraintTop_toBottomOf="@id/textview_second">
+
+            <Button
+                android:id="@+id/button_to_webview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="@string/next" />
+
+            <Button
+                android:id="@+id/button_second"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="@string/previous" />
+
+            <Button
+                android:id="@+id/button_freeze"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="@string/freeze" />
+
+            <Button
+                android:id="@+id/button_spam"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="@string/start_spam" />
+
+            <TextView
+                android:id="@+id/spam_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="@{secondFragment.spanCountLabel}" />
+        </LinearLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
