--- a/sample-app/src/main/res/layout/fragment_second.xml
+++ b/sample-app/src/main/res/layout/fragment_second.xml
@@ -57,6 +57,13 @@
                 android:text="@string/freeze" />
 
             <Button
+                android:id="@+id/button_work"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="@string/work_it" />
+
+            <Button
                 android:id="@+id/button_spam"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
