Add a Chrome custom tab to the app and a timer to time how long the user visits it. (#89)
* playing with chrome custom tabs

* Add a chrome custom tab, and a timer to times how long it was visited.

--- a/sample-app/src/main/res/layout/fragment_second.xml
+++ b/sample-app/src/main/res/layout/fragment_second.xml
@@ -43,6 +43,13 @@
                 android:text="@string/next" />
 
             <Button
+                android:id="@+id/button_to_custom_tab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="@string/custom_tab" />
+
+            <Button
                 android:id="@+id/button_second"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
