Slow rendering detector (#236)
* add slow rendering detection

* change spelling of the span names

* wire up noop slow rendering detector if FrameMetricsAggregator not available

* wrong var

* add configurable polling interval for render durations

* pluralize

* add unit test

* add verification that slow detector is de/resigstered.

* wire up configuration value

* make field final

* rename for consistency

* add builder for ActivityCallbacks

* change lifecycle to be resume/pause instead of start/stop.

* make a boolean config item to disable slow render detection

* add slow render to init events and config wad

* fix tests

* fix test

* change millis int to duration

* fix javadoc

* fix javadoc

--- a/sample-app/src/main/res/layout/fragment_second.xml
+++ b/sample-app/src/main/res/layout/fragment_second.xml
@@ -15,14 +15,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
         <TextView
             android:id="@+id/textview_second"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="second fragment"
+            app:layout_constraintBottom_toTopOf="@id/animatedView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.splunk.android.sample.DemoAnimatedView
+            android:id="@+id/animatedView"
+            android:layout_width="0dp"
+            android:layout_height="100dp"
             app:layout_constraintBottom_toTopOf="@id/button_box"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+        />
 
         <LinearLayout
             android:id="@+id/button_box"
@@ -63,19 +75,40 @@
                 android:layout_marginTop="8dp"
                 android:text="@string/previous" />
 
-            <Button
-                android:id="@+id/button_freeze"
+            <LinearLayout
+                android:id="@+id/freezy_box"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="@string/freeze" />
+                android:orientation="horizontal"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/textview_second">
+
+                <Button
+                        android:id="@+id/button_freeze"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="@string/freeze" />
+
+                <Button
+                    android:id="@+id/button_work"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="8dp"
+                    android:text="@string/work_it" />
+
+            </LinearLayout>
 
             <Button
-                android:id="@+id/button_work"
+                android:id="@+id/draw_slowly"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="@string/work_it" />
+                android:text="Draw Slowly" />
 
             <Button
                 android:id="@+id/button_spam"
