--- a/sample-app/src/main/res/layout/fragment_first.xml
+++ b/sample-app/src/main/res/layout/fragment_first.xml
@@ -70,6 +70,13 @@
                 android:layout_marginTop="8dp"
                 android:text="@string/http_me_bad" />
 
+            <Button
+                android:id="@+id/volley_request"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="@string/volley_client" />
+
             <TextView
                 android:id="@+id/session_id"
                 android:layout_width="wrap_content"
