--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -16,13 +16,13 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/next"
-      app:layout_constraintBottom_toTopOf="@id/textview_first"
+      app:layout_constraintBottom_toTopOf="@id/tv_text"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-      android:id="@+id/textview_first"
+      android:id="@+id/tv_text"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
