--- a/app/src/main/res/menu/menu_logged_in.xml
+++ b/app/src/main/res/menu/menu_logged_in.xml
@@ -3,8 +3,8 @@
   xmlns:tools="http://schemas.android.com/tools"
   tools:context="com.example.hello_otel.MainActivity">
   <item
-    android:id="@+id/action_show_log"
+    android:id="@+id/action_logout"
     android:orderInCategory="100"
-    android:title="@string/action_show_log"
+    android:title="@string/action_log_out"
     app:showAsAction="always" />
 </menu>
