--- a/app/src/main/res/layout/fragment_logged_out.xml
+++ b/app/src/main/res/layout/fragment_logged_out.xml
@@ -30,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/lorem_ipsum" />
+            android:text="@string/action_log_history" />
     </androidx.core.widget.NestedScrollView>
 
 </LinearLayout>
