--- a/app/src/main/res/values-v23/themes.xml
+++ b/app/src/main/res/values-v23/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-  <style name="Theme.Hello_otel" parent="Base.Theme.Hello_otel">
+  <style name="Theme.HelloOtel" parent="Base.Theme.HelloOtel">
     <!-- Transparent system bars for edge-to-edge. -->
     <item name="android:navigationBarColor">@android:color/transparent</item>
     <item name="android:statusBarColor">@android:color/transparent</item>
