--- a/app/src/main/res/menu/menu_logged_in.xml
+++ b/app/src/main/res/menu/menu_logged_in.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
-  tools:context="com.example.hello_otel.MainActivity">
+  tools:context="com.example.hello_otel.app.MainActivity">
   <item
     android:id="@+id/action_logout"
     android:orderInCategory="100"
