populate the session id on screen and set up cart

--- a/demo-app/src/main/res/menu/bottom_nav_menu.xml
+++ b/demo-app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,8 +12,8 @@
         android:title="@string/title_dashboard" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/navigation_cart"
+        android:icon="@drawable/ic_cart_foreground"
+        android:title="@string/title_cart" />
 
 </menu>
