--- a/demo-app/src/main/res/navigation/mobile_navigation.xml
+++ b/demo-app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="io.opentelemetry.android.demo.ui.home.HomeFragment"
+        android:name="io.opentelemetry.android.demo.ui.home.ShopFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
