--- a/demo-app/src/main/res/menu/bottom_nav_menu.xml
+++ b/demo-app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:title="@string/title_shop" />
 
     <item
         android:id="@+id/navigation_dashboard"
@@ -15,5 +15,11 @@
         android:id="@+id/navigation_cart"
         android:icon="@drawable/ic_cart_foreground"
         android:title="@string/title_cart" />
+
+    <item
+        android:id="@+id/exit_shop"
+        android:icon="@drawable/exit_to_main"
+        android:title="@string/title_exit_to_main"
+        android:onClick="onExitToMainClicked"/>
 
 </menu>
