set contentDescription for an image to avoid warnings

--- a/demo-app/src/main/res/layout/item_feature.xml
+++ b/demo-app/src/main/res/layout/item_feature.xml
@@ -19,6 +19,7 @@
 
         <ImageView
             android:id="@+id/arrowImageView"
+            android:contentDescription="@string/expand_or_collapse_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
